# balpy-poc

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  fly.toml  pyproject.toml
scripts/listen_to_events/: config.py  discord.py  main.py  strategies.py  telegram.py
scripts/listen_to_events/abis/: MockComposableStablePool.json
scripts/maxis-gauge-snapshot/: .gitignore  main.py  snapshot.py
scripts/maxis-gauge-snapshot/demo/: checkpointer_gauges_by_chain.json  weekly_veto_snapshot.json  weekly_veto_snapshot.md
workspaces/chains/: pyproject.toml
workspaces/chains/src/balpy/chains/: __init__.py
workspaces/cli/: pyproject.toml
workspaces/cli/src/balpy/cli/: __main__.py  helpers.py
workspaces/codegen/: pyproject.toml
workspaces/codegen/src/balpy/codegen/: abi_handler.py  main.py  solidity_converter.py
workspaces/codegen/src/balpy/codegen/example/: Vault_TODO.py  Vault_types.py
workspaces/codegen/src/tests/: test_abi_handler.py  test_solidity_converter.py
workspaces/contracts/: pyproject.toml
workspaces/contracts/src/balpy/contracts/: __init__.py  base_contract.py  contract_loader.py
workspaces/core/: pyproject.toml
workspaces/core/src/balpy/core/: config.py  utils.py
workspaces/core/src/balpy/core/lib/: __init__.py  time.py  web3_provider.py
workspaces/deployments/: pyproject.toml
workspaces/multisigs/src/balpy/multisigs/: __init__.py  multisigs.json
workspaces/subgraphs/: pyproject.toml
workspaces/subgraphs/src/balpy/subgraphs/: balancer.py  blocks.py  client.py  gauges.py  query.py
workspaces/subgraphs/tests/: test_blocks.py
