[tool.poetry]
name = "balpy"
version = "0.1.0"
description = ""
authors = ["José Ribeiro <jose@bleu.studio>"]
readme = "README.md"
packages = []

[tool.poetry.group.main.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
black = "^23.3.0"
coverage = { version = "5.0.3", extras = ["toml"] }
isort = { version = "^5.12.0", extras = ["pyproject"] }
pre-commit = "^3.3.1"
autoflake = "^2.1.1"

[tool.poetry.group.balpy-chains.dependencies]
balpy-chains = { path = "workspaces/chains", develop = true}

[tool.poetry.group.balpy-subgraph-deployments.dependencies]
balpy-subgraph-deployments = { path = "workspaces/subgraph_deployments", develop = true}

[tool.poetry.group.balpy-subgraphs.dependencies]
balpy-subgraphs = { path = "workspaces/subgraphs", develop = true}

[tool.poetry.group.subgraphs-test.dependencies]
balpy-subgraphs = { path = "workspaces/subgraphs", develop = true, extras=["test"]}

[tool.poetry.group.balpy-core.dependencies]
balpy-core = { path = "workspaces/core", develop = true}

[tool.poetry.group.balpy-contracts.dependencies]
balpy-contracts = { path = "workspaces/contracts", develop = true}

[tool.poetry.group.balpy-deployments.dependencies]
balpy-deployments = { path = "workspaces/deployments", develop = true}

[tool.poetry.group.cli.dependencies]
balpy-cli = { path = "workspaces/cli", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
    | workspaces/deployments/src/balpy/deployments
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.autoflake]
remove_all_unused_imports = true
in_place = true

[tool.coverage]
# https://github.com/nedbat/coveragepy
[tool.coverage.run]
