[tool.poetry]
name = "balpy-cli"
version = "0.0.0"
description = ""
authors = ["José Ribeiro <jose@bleu.studio>"]
packages = [{include = "balpy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
balpy-contracts = { path = "../contracts"}
balpy-chains = { path = "../chains"}
asyncclick = "^8.1.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
balpy = "balpy.cli.__main__:main"
